# RevCard

./: Makefile  README.md  package-lock.json  revcard.html  revcard.txt
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css  vehicles.ts  wasmClient.ts
wasm/: Cargo.toml
wasm/.cargo/: .global-cache
wasm/src/: lib.rs
