[package]
name = "revcards-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.20.3"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"

